# gifsicle-jna

./: .gitignore  configure.ac  configure~  libtool  test_gifsicle  test_gifsicle.c
.github/workflows/: build.yml
include/lcdf/: inttypes.h
include/lcdfgif/: gif.h
jna_demo/: pom.xml
jna_demo/src/main/java/com/example/: Gifsicle.java  GifsicleUtil.java  Main.java  SimpleExample.java  SimpleTest.java
jna_demo/src/main/resources/: libgifsicle.dylib
src/: Makefile.am  clp.c  clp.lo  fmalloc.c  fmalloc.lo  gifdiff.c  giffunc.c  giffunc.lo  gifread.c  gifread.lo  gifsicle-cli.c  gifsicle.c  gifsicle.h  gifsicle.lo  giftoc.c  gifunopt.c  gifunopt.lo  gifview.c  gifwrite.c  gifwrite.lo  gifx.c  kcolor.h  kcolor.lo  libgifsicle.c  libgifsicle.h  libgifsicle.la  libgifsicle.lo  merge.lo  optimize.lo  support.lo  ungifwrt.c  ungifwrt.lo  xform.lo
src/.libs/: libgifsicle.0.dylib  libgifsicle.dylib  libgifsicle.la  libgifsicle.lai
